--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -898,8 +898,12 @@ body {
         text-decoration: none;
     }
 
-.service-detail-container .general-info i {
-    font-size: 20px;
-    color: #96dbff;
-    margin-right: 5px;
+.service-detail-container .general-info {
+    font-size: 14px;
 }
+
+    .service-detail-container .general-info i {
+        font-size: 20px;
+        color: #96dbff;
+        margin-right: 5px;
+    }
