--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -186,7 +186,7 @@
                                 </div>
                             </div>
                             <div class="row outstanding-form-footer">
-                                <input type="button" id="btnJoinUrban" value="THAM GIA" class="btn-join" />
+                                <input type="button" id="btnJoinUrban" value="THAM GIA" class="btn-join" onclick="javascript: window.location.href='/Service/Detail/@outstandingservice.Id'" />
                             </div>
                         </div>
                     </div>
