--- a/ImmiCanada/Views/Service/Detail.cshtml
+++ b/ImmiCanada/Views/Service/Detail.cshtml
@@ -15,11 +15,11 @@
     </div>
     <div class="row canada-deserve-to-life">
         <div class="row col-sm-12 canada-deserve-to-life-title">
-            <img src="~/Content/images/left-bg.jpg" class="img-left-icon" /><p class="immigration-service-type-title">CHƯƠNG TRÌNH @Model.Title</p>
+            <img src="~/Content/images/left-bg.jpg" class="img-left-icon" /><p class="immigration-service-type-title">@Model.Title</p>
         </div>
     </div>
     <div class="row col-sm-10 offset-1 general-info">
-        <div class="col-sm-4 row">
+        <div class="col-sm-4 row mar-bottom30px">
             <div class="col-sm-6 text-left remove-paddingleft">
                 <i class="fa fa-address-card-o" aria-hidden="true"></i>Địa điểm
             </div>
@@ -37,8 +37,6 @@
             </div>
             <div class="col-sm-6">@Model.Fee</div>
         </div>
-    </div>
-    <div class="row col-sm-10 offset-1 general-info mar-top25px">
         <div class="col-sm-4 row">
             <div class="col-sm-6 text-left remove-paddingleft">
                 <i class="fa fa-address-book" aria-hidden="true"></i>Thường trú nhân
