--- a/ImmiCanada/Views/Works/Index.cshtml
+++ b/ImmiCanada/Views/Works/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<ImmiCanada.Entities.Work>
 
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "CanadaVisa CMS";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 
 <p>
@@ -58,58 +58,59 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Income)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Experience)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Position)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Certificate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WorkType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberOfRecruitments)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Sex)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Occupation)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Age)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Detail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Benefic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberOfView)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Base64Image)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImmigrationService.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Noc.Title)
-        </td>
-        <td>
-            @Html.ActionLink("Sửa", "Edit", new { id=item.WorkId }) |
-            @Html.ActionLink("Xóa", "Delete", new { id=item.WorkId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Income)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Experience)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Position)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Certificate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WorkType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumberOfRecruitments)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Sex)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Occupation)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Age)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Detail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Benefic)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumberOfView)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Base64Image)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ImmigrationService.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Noc.Title)
+            </td>
+            <td>
+                @Html.ActionLink("Sửa", "Edit", new { id = item.WorkId }) |
+                @Html.ActionLink("Xóa", "Delete", new { id = item.WorkId })
+            </td>
+        </tr>
+    }
 
 </table>
