--- a/ImmiCanada/Views/ImmigrationServices/Create.cshtml
+++ b/ImmiCanada/Views/ImmigrationServices/Create.cshtml
@@ -1,85 +1,89 @@
 ﻿@model ImmiCanada.Entities.ImmigrationService
+@{
+    ViewBag.Title = "CanadaVisa CMS";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
 
 <h2 style="text-align: center ">Thêm mới chương trình</h2>
 
 @using (Html.BeginForm("Create", "ImmigrationServices", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-<div class="container-fluid">
-    <div class="form-group mt-3">
-        <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
-    </div>
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Chương trình</label>
-            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+    <div class="container-fluid">
+        <div class="form-group mt-3">
+            <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
         </div>
-        <div class="col-6">
-            <label>Loại chương trình</label>
-            @Html.DropDownList("Type", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Chương trình</label>
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Loại chương trình</label>
+                @Html.DropDownList("Type", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Tỉnh bang</label>
-            @Html.DropDownList("State", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Tỉnh bang</label>
+                @Html.DropDownList("State", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Thường trú nhân</label>
+                @Html.DropDownList("PermanentResident", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PermanentResident, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>Thường trú nhân</label>
-            @Html.DropDownList("PermanentResident", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.PermanentResident, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Thời gian</label>
+                @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Phí dịch vụ</label>
+                @Html.EditorFor(model => model.Fee, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Fee, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Thời gian</label>
-            @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Nổi bật</label>
+                <input type="checkbox" id="IsOutstanding" name="IsOutstanding" />
+            </div>
         </div>
-        <div class="col-6">
-            <label>Phí dịch vụ</label>
-            @Html.EditorFor(model => model.Fee, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Fee, "", new { @class = "text-danger" })
+        <div class="custom-file">
+            @Html.TextBox("Base64Image1", "", new { type = "file" }) <br />
+            (1000px X 563px)
         </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Nổi bật</label>
-            <input type="checkbox" id="IsOutstanding" name="IsOutstanding" />
+        <div class="custom-file mt-3">
+            @Html.TextBox("Base64Image2", "", new { type = "file" }) <br />
+            (896px X 604px)
         </div>
+        <div class="custom-file mt-3">
+            @Html.TextBox("Base64Image3", "", new { type = "file" }) <br />
+            (896px X 604px)
+        </div>
+        <div class="custom-file mt-3">
+            @Html.TextBox("Base64Image4", "", new { type = "file" }) <br />
+            (896px X 604px)
+        </div>
+        <div class="custom-file mt-3">
+            @Html.TextBox("Base64Image5", "", new { type = "file" }) <br />
+            (896px X 604px)
+        </div>
+        <div class="custom-file mt-3">
+            @Html.TextAreaFor(model => model.Overview, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+        <div class="custom-file mt-3">
+            @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+        <script>
+            CKEDITOR.replace('Overview');
+            CKEDITOR.replace('Description');
+        </script>
     </div>
-    <div class="custom-file">
-        @Html.TextBox("Base64Image1", "", new { type = "file" }) <br />
-        (1000px X 563px)
-    </div>
-    <div class="custom-file mt-3">
-        @Html.TextBox("Base64Image2", "", new { type = "file" }) <br />
-        (905px X 610px)
-    </div>
-    <div class="custom-file mt-3">
-        @Html.TextBox("Base64Image3", "", new { type = "file" }) <br />
-        (905px X 610px)
-    </div>
-    <div class="custom-file mt-3">
-        @Html.TextBox("Base64Image4", "", new { type = "file" }) <br />
-        (905px X 610px)
-    </div>
-    <div class="custom-file mt-3">
-        @Html.TextBox("Base64Image5", "", new { type = "file" }) <br />
-        (905px X 610px)
-    </div>
-    <div class="custom-file mt-3">
-        @Html.TextAreaFor(model => model.Overview, new { htmlAttributes = new { @class = "form-control" } })
-    </div>
-    <div class="custom-file mt-3">
-        @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-    </div>
-    <script>
-        CKEDITOR.replace('Overview');
-        CKEDITOR.replace('Description');
-    </script>
-</div>
 }
