--- a/ImmiCanada/Views/Works/Create.cshtml
+++ b/ImmiCanada/Views/Works/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ImmiCanada.Entities.Work
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "CanadaVisa CMS";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 
 <h2 style="text-align: center ">Thêm mới việc làm</h2>
@@ -10,111 +10,111 @@
 @using (Html.BeginForm("Create", "Works", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-<div class="container-fluid">
-    <div class="form-group mt-3">
-        <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
-    </div>
+    <div class="container-fluid">
+        <div class="form-group mt-3">
+            <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+        </div>
 
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Chương trình</label>
-            @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Chương trình</label>
+                @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>NOC</label>
+                @Html.DropDownList("NocId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>NOC</label>
-            @Html.DropDownList("NocId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Mức lương</label>
-            @Html.EditorFor(model => model.Income, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Income, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Mức lương</label>
+                @Html.EditorFor(model => model.Income, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Income, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Kinh nghiệm</label>
+                @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>Kinh nghiệm</label>
-            @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Chức vụ</label>
-            @Html.EditorFor(model => model.Position, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Chức vụ</label>
+                @Html.EditorFor(model => model.Position, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Yêu cầu bằng cấp</label>
+                @Html.EditorFor(model => model.Certificate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Certificate, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>Yêu cầu bằng cấp</label>
-            @Html.EditorFor(model => model.Certificate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Certificate, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Hình thức làm việc</label>
-            @Html.EditorFor(model => model.WorkType, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.WorkType, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Hình thức làm việc</label>
+                @Html.EditorFor(model => model.WorkType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WorkType, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Số lượng cần tuyển</label>
+                @Html.EditorFor(model => model.NumberOfRecruitments, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NumberOfRecruitments, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>Số lượng cần tuyển</label>
-            @Html.EditorFor(model => model.NumberOfRecruitments, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.NumberOfRecruitments, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Giới tính</label>
-            @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Giới tính</label>
+                @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Nghành nghề</label>
+                @Html.EditorFor(model => model.Occupation, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Occupation, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>Nghành nghề</label>
-            @Html.EditorFor(model => model.Occupation, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Occupation, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-6">
-            <label>Yêu cầu độ tuổi</label>
-            @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Yêu cầu độ tuổi</label>
+                @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Số lượng xem</label>
+                @Html.EditorFor(model => model.NumberOfView, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NumberOfView, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <div class="col-6">
-            <label>Số lượng xem</label>
-            @Html.EditorFor(model => model.NumberOfView, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.NumberOfView, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-md-12">
-            <label>Hình ảnh</label>
-            @Html.EditorFor(model => model.Base64Image, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Base64Image, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-md-12">
+                <label>Hình ảnh</label>
+                @Html.EditorFor(model => model.Base64Image, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Base64Image, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-md-12">
-            <label>Mô tả công việc</label>
-            @Html.EditorFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-md-12">
+                <label>Mô tả công việc</label>
+                @Html.EditorFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-md-12">
-            <label>Quyền lợi được hưởng</label>
-            @Html.EditorFor(model => model.Benefic, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Benefic, "", new { @class = "text-danger" })
+        <div class="form-group row">
+            <div class="col-md-12">
+                <label>Quyền lợi được hưởng</label>
+                @Html.EditorFor(model => model.Benefic, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Benefic, "", new { @class = "text-danger" })
+            </div>
         </div>
     </div>
-</div>
 }
