--- a/ImmiCanada/Views/Works/Details.cshtml
+++ b/ImmiCanada/Views/Works/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@model ImmiCanada.Entities.Work
 
 @{
-    ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "CanadaVisa CMS";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 
 <h2>Details</h2>
