--- a/ImmiCanada/Views/Works/Index.cshtml
+++ b/ImmiCanada/Views/Works/Index.cshtml
@@ -5,55 +5,55 @@
     Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 
+<style>
+    .width-short-column {
+        width: 130px;
+    }
+    .width-long-column {
+        width: 170px;
+    }
+</style>
+
 <p>
     @Html.ActionLink("Thêm mới việc làm", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            Mức lương
-        </th>
-        <th>
-            Kinh nghiệm
-        </th>
-        <th>
-            Chức vụ
-        </th>
-        <th>
-            Yêu cầu bằng cấp
-        </th>
-        <th>
-            Hình thức làm việc
-        </th>
-        <th>
-            Số lượng cần tuyển
-        </th>
-        <th>
-            Giới tính
-        </th>
-        <th>
-            Yêu cầu bằng cấp
-        </th>
-        <th>
-            Yêu cầu độ tuổi
-        </th>
-        <th>
-            Mổ tả công việc
-        </th>
-        <th>
-            Quyền lợi được hưởng
-        </th>
-        <th>
-            Lượt xem
-        </th>
-        <th>
-            Hình ảnh
-        </th>
-        <th>
+        <th class="width-short-column">
             Chương trình
         </th>
-        <th>
+        <th class="width-short-column">
             NOC
+        </th>
+        <th class="width-short-column">
+            Mức lương
+        </th>
+        <th class="width-short-column">
+            Kinh nghiệm
+        </th>
+        <th class="width-short-column">
+            Chức vụ
+        </th>
+        <th class="width-long-column">
+            Yêu cầu bằng cấp
+        </th>
+        <th class="width-long-column">
+            Hình thức làm việc
+        </th>
+        <th class="width-long-column">
+            Số lượng cần tuyển
+        </th>
+        <th class="width-short-column">
+            Giới tính
+        </th>
+        <th class="width-long-column">
+            Yêu cầu bằng cấp
+        </th>
+        <th class="width-long-column">
+            Yêu cầu độ tuổi
+        </th>
+        <th class="width-short-column">
+            Hình ảnh
         </th>
         <th></th>
     </tr>
@@ -61,6 +61,12 @@
     @foreach (var item in Model)
     {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ImmigrationService.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Noc.Title)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Income)
             </td>
@@ -87,24 +93,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
-            </td>
+            </td>            
             <td>
-                @Html.DisplayFor(modelItem => item.Detail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Benefic)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumberOfView)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Base64Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImmigrationService.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Noc.Title)
+                @if (@item.Base64Image.Length != 0)
+                {
+                    <img width="100" height="100" src="@item.Base64Image" />
+                }
             </td>
             <td>
                 @Html.ActionLink("Sửa", "Edit", new { id = item.WorkId }) |
