--- a/ImmiCanada/Views/ImmigrationServices/Create.cshtml
+++ b/ImmiCanada/Views/ImmigrationServices/Create.cshtml
@@ -81,6 +81,11 @@
         <div class="custom-file mt-3">
             @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
         </div>
+
+        <div class="form-group mt-3">
+            <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+        </div>
+
         <script>
             CKEDITOR.replace('Overview');
             CKEDITOR.replace('Description');
