--- a/ImmiCanada/Views/ImmigrationServices/Delete.cshtml
+++ b/ImmiCanada/Views/ImmigrationServices/Delete.cshtml
@@ -4,139 +4,11 @@
     Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 <h3>Bạn có muốn delete chương trình này?</h3>
-<div>
-    <h4>ImmigrationService</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Fee)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Fee)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Time)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Time)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Overview)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Overview)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Base64Image1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Base64Image1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Base64Image2)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Base64Image2)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Base64Image3)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Base64Image3)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Base64Image4)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Base64Image4)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Base64Image5)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Base64Image5)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PermanentResident1.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PermanentResident1.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.State1.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.State1.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ImmigrationServiceType.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ImmigrationServiceType.Name)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Xóa" class="btn btn-default" /> |
-            @Html.ActionLink("Trở về", "Index")
-        </div>
-    }
-</div>
+    <div class="form-group">
+        <input type="submit" value="Xóa" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+    </div>
+}
