--- a/ImmiCanada/Views/Works/Create.cshtml
+++ b/ImmiCanada/Views/Works/Create.cshtml
@@ -96,25 +96,33 @@
         <div class="form-group row">
             <div class="col-md-12">
                 <label>Hình ảnh</label>
-                @Html.EditorFor(model => model.Base64Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Base64Image, "", new { @class = "text-danger" })
+                <div class="custom-file">
+                    @Html.TextBox("Base64Image", "", new { type = "file" }) <br />
+                    (.........px X ........px)
+                </div>
             </div>
         </div>
 
         <div class="form-group row">
             <div class="col-md-12">
                 <label>Mô tả công việc</label>
-                @Html.EditorFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
         <div class="form-group row">
             <div class="col-md-12">
                 <label>Quyền lợi được hưởng</label>
-                @Html.EditorFor(model => model.Benefic, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Benefic, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.Benefic, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
+
+        <div class="form-group mt-3">
+            <input type="submit" value="Thêm mới" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+        </div>
+        <script>
+            CKEDITOR.replace('Detail');
+            CKEDITOR.replace('Benefic');
+        </script>
     </div>
 }
