--- a/ImmiCanada/Views/Works/Delete.cshtml
+++ b/ImmiCanada/Views/Works/Delete.cshtml
@@ -5,142 +5,13 @@
     Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
 
-<h2>Delete</h2>
+<h3>Bạn có chắc chắn muốn xóa?</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Work</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Income)
-        </dt>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.Income)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Experience)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Experience)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Position)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Position)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Certificate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Certificate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WorkType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WorkType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumberOfRecruitments)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumberOfRecruitments)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Sex)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Sex)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Occupation)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Occupation)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Age)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Detail)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Detail)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Benefic)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Benefic)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumberOfView)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumberOfView)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Base64Image)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Base64Image)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ImmigrationService.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ImmigrationService.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Noc.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Noc.Title)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+    <div class="form-actions no-color">
+        <input type="submit" value="Xóa" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+    </div>
+}
