--- a/ImmiCanada/Views/Works/Edit.cshtml
+++ b/ImmiCanada/Views/Works/Edit.cshtml
@@ -4,146 +4,120 @@
     ViewBag.Title = "CanadaVisa CMS";
     Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
-<h2>Edit</h2>
+<h2 style="text-align: center ">Chỉnh sửa công việc</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Works", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Work</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.WorkId)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ImmigrationServiceId, "ImmigrationServiceId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+    <div class="container-fluid">
+        <div class="form-group mt-3">
+            <input type="submit" value="Chỉnh sửa" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+        </div>
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Chương trình</label>
                 @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NocId, "NocId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-6">
+                <label>NOC</label>
                 @Html.DropDownList("NocId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Income, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Mức lương</label>
                 @Html.EditorFor(model => model.Income, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Income, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Experience, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-6">
+                <label>Kinh nghiệm</label>
                 @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Position, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Chức vụ</label>
                 @Html.EditorFor(model => model.Position, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Certificate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-6">
+                <label>Yêu cầu bằng cấp</label>
                 @Html.EditorFor(model => model.Certificate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Certificate, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.WorkType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Hình thức làm việc</label>
                 @Html.EditorFor(model => model.WorkType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.WorkType, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NumberOfRecruitments, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-6">
+                <label>Số lượng cần tuyển</label>
                 @Html.EditorFor(model => model.NumberOfRecruitments, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NumberOfRecruitments, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Giới tính</label>
                 @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Occupation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-6">
+                <label>Nghành nghề</label>
                 @Html.EditorFor(model => model.Occupation, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Occupation, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Age, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Độ tuổi yêu cầu</label>
                 @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Detail, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Benefic, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Benefic, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Benefic, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NumberOfView, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-6">
+                <label>Số lượt xem</label>
                 @Html.EditorFor(model => model.NumberOfView, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NumberOfView, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Base64Image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Base64Image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Base64Image, "", new { @class = "text-danger" })
+        <div class="custom-file mt-3">
+            @Html.TextBox("Base64Image", "", new { type = "file" }) <br />
+            (896px X 604px)
+        </div>
+
+        <div class="form-group row mt-3">
+            <div class="col-md-12">
+                <label>Mô tả công việc</label><br />
+                @Html.TextAreaFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="form-group row">
+            <div class="col-md-12">
+                <label>Quyền lợi được hưởng</label><br />
+                @Html.TextAreaFor(model => model.Benefic, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
+
+        <div class="form-group mt-3">
+            <input type="submit" value="Chỉnh sửa" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
+        </div>
+
+        <script>
+            CKEDITOR.replace('Detail');
+            CKEDITOR.replace('Benefic');
+        </script>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
