--- a/ImmiCanada/Views/Service/Detail.cshtml
+++ b/ImmiCanada/Views/Service/Detail.cshtml
@@ -84,7 +84,7 @@
     </div>
     <div class="row col-sm-10 offset-1"><hr class="full-width" /></div>
     <div class="row col-sm-11 offset-1">
-        <div class="col-sm-9">
+        <div class="col-sm-8">
             <div class="row">@Html.Raw(Model.Overview)</div>
             <div class="row">@Html.Raw(Model.Description)</div>
         </div>
@@ -92,21 +92,29 @@
             <div class="right-contact">
                 <div class="row col-sm-12 mar-botttom6px"><h3>Liên hệ tư vấn</h3></div>
                 <div class=" row col-sm-8 offset-2 mar-botttom6px">
-                    <img src="https://s3-cdn.rever.vn/p/v2.38.4/images/isa-team-v2.png" class="img-fluid" />
+                    <img src="~/Content/images/support-employee.jpg" class="img-fluid" />
                 </div>
                 <div class="row col-sm-12 mar-top10px"><h5 class="suppor-already-title">Chuyên viên đã sẵn sàng hỗ trợ</h5></div>
                 <div class="row col-sm-10 offset-1 suppor-already-title-sec mar-botttom6px">Tư vấn hoàn toàn miễn phí</div>
-                <div class="row mar-bottom3px">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <p class="text-small-center real-estate">
+                            <span><strong>Định cư Canada</strong></span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-sm-12">
-                        <button class="btn btn-call-support full-width mar-top25px" onclick="javascript: window.location.href='tel:0948009988'"><i class="fa fa-phone mar-right3px" aria-hidden="true"></i>Gọi chuyên viên ngay</button>
+                        <button class="btn btn-call-support full-width mar-top10px" onclick="javascript: window.location.href='tel:0948009988'"><i class="fa fa-phone mar-right3px" aria-hidden="true"></i>Gọi chuyên viên ngay</button>
                     </div>
                 </div>
                 <div class="row mar-bottom10px mar-top10px">
                     <div class="col-sm-12 text-center">Hoặc</div>
                 </div>
+                <hr />
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <a href="#" class="chat-to-revert">Chát với Rever</a>
+                        <a href="https://www.facebook.com/dichvucanadavisa/" target="_blank" class="chat-to-revert">Chát với Canada Visa</a>
                     </div>
                     
                 </div>
