--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -961,6 +961,24 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         text-decoration: none;
         color: #265765;
     }
+
+.real-estate {
+    position: relative;
+    display: block;
+    width: 100%;
+    margin: 30px 0;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    font-size: 1rem;
+    line-height: .1px;
+    font-weight: 400;
+    color: #838383;
+}
+
+    .real-estate span {
+        background: #fff;
+        padding: 0 6px;
+    }
 /* Support for client - BEGIN */
 table.text-editor-supported {
     border: 0;
