--- a/ImmiCanada/Views/Service/Detail.cshtml
+++ b/ImmiCanada/Views/Service/Detail.cshtml
@@ -116,10 +116,13 @@
                     <div class="col-sm-12 text-center">
                         <a href="https://www.facebook.com/dichvucanadavisa/" target="_blank" class="chat-to-revert">Chát với Canada Visa</a>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row col-sm-10 offset-1">
+        @{Html.RenderAction("Works", "Component", new { ServiceId = Model.Id });}
     </div>
 </div>
 <div class="container-fluid pad-top40px mar-bottom60px">
